# federated_stragglers

./: README.md  test_mnist.py
FLeWM-main/: .gitignore  README.md
FLeWM-main/src/: #device.py#  #server.py#  accuracy_by_demographic.py  accuracy_by_response_rate.py  adjustment.py  autograd_fast.py  local_experiment.py  probability_estimator.py  proof_of_technique_simulation.py  real_server.py  response_rate_by_eopch.py  run_client.sh  run_distributed.sh  run_new.sh  satisfaction_model.pkl  servers.txt
flwr_tutorials/: tutorial1-test.py  tutorial1.py  tutorial2.py  tutorial3.py
mnar_in_flwr/: #strategy.py#  client.py  client.py~  dataset_loader.py  dataset_loader.py~  knobs.py  knobs.py~  main.py  main.py~  net.py  net.py~  server.py  server.py~  shadow_recovery.py  strategy.py  strategy.py~  to_do.md
mnar_in_flwr/myclient/: README.md  pyproject.toml  pyproject.toml~  res_50.txt  run_simulations.sh  run_simulations.sh~  runtime_env.yaml  test.txt~
mnar_in_flwr/myclient/myclient/: __init__.py  client_app.py  client_app.py~  compute.py  demographics.py  knobs.py  knobs.py~  missing.py  net.py  net.py~  server_app.py  server_app.py~  shadow_recovery.py  strategy.py  strategy.py~  task.py
mnar_in_flwr/myclient/results/: #res_not_corrected_1000.txt#  #res_not_corrected_500.txt#  res_1000.txt  res_1500.txt  res_2000.txt  res_250.txt  res_2500.txt  res_3000.txt  res_3500.txt  res_4000.txt  res_4500.txt  res_500.txt  res_5000.txt  res_750.txt  res_not_corrected_1000.txt  res_not_corrected_1500.txt  res_not_corrected_2000.txt  res_not_corrected_2500.txt  res_not_corrected_3000.txt  res_not_corrected_3500.txt  res_not_corrected_4000.txt  res_not_corrected_4500.txt  res_not_corrected_500.txt  res_not_corrected_5000.txt  res_not_missing_1000.txt  res_not_missing_1500.txt  res_not_missing_2000.txt  res_not_missing_2500.txt  res_not_missing_3000.txt  res_not_missing_3500.txt  res_not_missing_4000.txt  res_not_missing_4500.txt  res_not_missing_500.txt  res_not_missing_5000.txt
